; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_mkdir-label.c_mkdirat_label.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_mkdir-label.c_mkdirat_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_IFDIR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mkdirat_label(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @assert(i8* %9)
  %11 = load i32, i32* %5, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* @S_IFDIR, align 4
  %14 = call i32 @mac_selinux_create_file_prepare_at(i32 %11, i8* %12, i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  store i32 %18, i32* %4, align 4
  br label %33

19:                                               ; preds = %3
  %20 = load i32, i32* %5, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @mkdirat_errno_wrapper(i32 %20, i8* %21, i32 %22)
  store i32 %23, i32* %8, align 4
  %24 = call i32 (...) @mac_selinux_create_file_clear()
  %25 = load i32, i32* %8, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %4, align 4
  br label %33

29:                                               ; preds = %19
  %30 = load i32, i32* %5, align 4
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @mac_smack_fix_at(i32 %30, i8* %31, i32 0)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %29, %27, %17
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @mac_selinux_create_file_prepare_at(i32, i8*, i32) #1

declare dso_local i32 @mkdirat_errno_wrapper(i32, i8*, i32) #1

declare dso_local i32 @mac_selinux_create_file_clear(...) #1

declare dso_local i32 @mac_smack_fix_at(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
